grow and learn page content and images

--- a/grow.html
+++ b/grow.html
@@ -7,17 +7,71 @@ permalink: /grow/
 
 <!-- Hero -->
 {% include hero.html
-title="Let's grow!"
-subtitle="Lead With Confidence."
-image="/assets/images/pages/grow/hero-grow.jpg"
+title="Grow Your Reach"
+subtitle="Strengthen Your Systems & Lead With Confidence."
+image="/assets/images/pages/grow/grow2.jpg"
 cta_text="Get In Touch"
 cta_url="/contact"
 %}
 
 <!-- Section -->
+<section>
+  <div class="container">
+    <div>
+      <p>
+        You want to reach more people and serve your community more effectively—but the tools and strategy to get there can feel overwhelming. We help you bridge that gap with systems and support that make sense for real teams and real goals.
+      </p>
+      <p>
+        We’ll help you organize your work, build capacity, and make digital outreach easier and more impactful.
+      </p>
+    </div>
+  </div>
+</section>
 
 
-<!-- Section -->
+
+<!-- Section - What We Help You Do -->
+<section>
+  <div class="container column">
+    <div class="heading-container">
+      <h2>What We Help You Do</h2>
+    </div>
+    <div class="bento-container">
+      {% include feature.html
+      title="Build Your Strategy"
+      description="Reach the right people and share your message clearly. We help you grow your digital presence in a way that feels aligned with your values and capacity. From email marketing and newsletters to social media planning, SEO, and story-driven digital marketing."
+      image="/assets/images/pages/grow/strategy2.jpg"
+      image_alt="Digital Strategy Planning"
+      button_text="Plan Your Outreach"
+      button_url="/services/strategy"
+      icon="✦"
+      reverse=true
+      %}
+
+      {% include feature.html
+      title="Set Up the Right Tools"
+      description="Technology should support your work—not add to your stress. We help you find and implement digital tools that support communication, organization, and collaboration. Whether it's Google Workspace, Microsoft 365, Slack, or project management tools like Notion, Trello, and Asana."
+      image="/assets/images/pages/grow/setup.jpg"
+      image_alt="Digital Tools Setup"
+      button_text="Streamline Your Tools"
+      button_url="/services/tools"
+      icon="✦"
+      %}
+
+      {% include feature.html
+      title="Support Your Team"
+      description="We provide onboarding, training, and documentation to ensure your team feels confident and supported. From staff onboarding and documentation to one-on-one or team training sessions and ongoing tech coaching for long-term confidence."
+      image="/assets/images/pages/grow/team-support.jpg"
+      image_alt="Team Support and Training"
+      button_text="Empower Your Team"
+      button_url="/services/support"
+      icon="✦"
+      reverse=true
+
+      %}
+    </div>
+  </div>
+</section>
 
 
 <!-- Section -->
