--- a/rize.html
+++ b/rize.html
@@ -1,119 +1,76 @@
----
-layout: default
-title: Rize
-hero-title: Who We Are
-hero-subtitle: This is our story
-permalink: /rize/
----
-
-<!-- Hero -->
-{% include hero.html
-title="Together, we Rize!"
-subtitle="Lead With Confidence."
-image="/assets/images/pages/rize/hero-rize.jpg"
-cta_text="Get In Touch"
-cta_url="/contact"
+{% include feature.html
+title="Build Your Strategy"
+description="Reach the right people and share your message clearly. We help you grow your digital presence in a way that feels aligned with your values and capacity."
+image="/assets/images/pages/home/navigate-digital.jpg"
+image_alt="Digital Strategy Planning"
+button_text="Plan Your Outreach"
+button_url="/services/strategy"
+icon="✦"
+services="Email marketing, newsletters, and outreach campaigns|Social media planning and content calendars|SEO and local search visibility|Story-driven digital marketing"
 %}
 
+{% include feature.html
+title="Set Up the Right Tools"
+description="Technology should support your work—not add to your stress. We help you find and implement digital tools that support communication, organization, and collaboration."
+image="/assets/images/pages/home/digital-presence.jpg"
+image_alt="Digital Tools Setup"
+button_text="Streamline Your Tools"
+button_url="/services/tools"
+icon="✦"
+reverse=true
+services="Google Workspace, Microsoft 365, Slack setup and support|Project management with Notion, Trello, Asana, etc.|Custom tool recommendations based on your needs"
+%}
 
-<!-- Section -->
-<section>
-  <div class="container-full-width">
-    <div class="col">
-      <div class="text-container">
-        <h2>Our Mission</h2>
-        <p class="subtitle">We are entering a new digital era and everyone deserves a place in it. Rize Digital helps communities rise by building the skills, tools, and confidence needed to thrive online.</p>
-        <p class="subtitle">Our mission is to uplift underserved communities by bridging gaps in access and creating space for growth, creativity, and connection.</p>
-        <p class="subtitle">Together, we're building a future where everyone can rise.</p>
-      </div>
-    </div>
-    <div class="col">
-      <div class="image-container">
-        <img src="/assets/images/pages/rize/vision.jpg" alt="Rize Digital" />
-      </div>
-    </div>
-  </div>
-</section>
+{% include feature.html
+title="Support Your Team"
+description="We provide onboarding, training, and documentation to ensure your team feels confident and supported."
+image="/assets/images/pages/home/empower-your-team.jpg"
+image_alt="Team Support and Training"
+button_text="Empower Your Team"
+button_url="/services/support"
+icon="✦"
+services="Staff onboarding and documentation|One-on-one or team training sessions|Tech coaching for long-term confidence"
+%}
 
-
-<!-- Section - Values -->
+<!-- Section - What We Help You Do -->
 <section>
   <div class="container column">
     <div class="heading-container">
-      <h2>Our Values</h2>
-      <!-- <p class="subtitle">We offer support where you need it most—always guided by care, clarity, and community.</p> -->
+      <h2>What We Help You Do</h2>
     </div>
     <div class="bento-container">
       {% include feature.html
-      title="Community Rooted"
-      description="We don't just work in communities—we work with them. Our approach is grounded in listening, learning, and building relationships. By staying culturally informed and people-centered, we create digital solutions that reflect the strengths, voices, and values of the communities we serve."
+      title="Build Your Strategy"
+      description="Reach the right people and share your message clearly. We help you grow your digital presence in a way that feels aligned with your values and capacity. From email marketing and newsletters to social media planning, SEO, and story-driven digital marketing."
       image="/assets/images/pages/home/navigate-digital.jpg"
-      image_alt="Community Partnerships"
-      button_text="Explore Our Services"
-      button_url="/services"
-      icon="🌾"
-      reverse=true
+      image_alt="Digital Strategy Planning"
+      button_text="Plan Your Outreach"
+      button_url="/services/strategy"
+      icon="✦"
       %}
 
       {% include feature.html
-      title="Empowerment Through Education"
-      description="We believe that knowledge should be shared, not gatekept. Whether through workshops, one-on-one support, or clear documentation, we help clients build skills and confidence that last."
+      title="Set Up the Right Tools"
+      description="Technology should support your work—not add to your stress. We help you find and implement digital tools that support communication, organization, and collaboration. Whether it's Google Workspace, Microsoft 365, Slack, or project management tools like Notion, Trello, and Asana."
       image="/assets/images/pages/home/digital-presence.jpg"
-      image_alt="Community Partnerships"
-      button_text="Learn More"
-      button_url="#"
-      icon="🌱"
-      %}
-
-      {% include feature.html
-      title="Technology for Good"
-      description="We use digital tools to uplift—not extract. Our approach is grounded in digital sovereignty, safe and healthy online spaces, real-world wellbeing, and sustainability to build a better future for communities and the planet."
-      image="/assets/images/pages/home/plan-purpose.jpg"
-      image_alt="Community Partnerships"
-      button_text="Learn More"
-      button_url="#"
-      icon="🌿"
+      image_alt="Digital Tools Setup"
+      button_text="Streamline Your Tools"
+      button_url="/services/tools"
+      icon="✦"
       reverse=true
       %}
 
       {% include feature.html
-      title="Innovation with Intention"
-      description="We believe in using the right tools—not just the newest ones. Our choices are driven by your goals, not trends or hype. Whether it's a simple website or a custom solution, we make sure the technology fits your needs and helps you do what you do best."
+      title="Support Your Team"
+      description="We provide onboarding, training, and documentation to ensure your team feels confident and supported. From staff onboarding and documentation to one-on-one or team training sessions and ongoing tech coaching for long-term confidence."
       image="/assets/images/pages/home/empower-your-team.jpg"
-      image_alt="Community Partnerships"
-      button_text="Learn More"
-      button_url="#"
-      icon="🚀"
+      image_alt="Team Support and Training"
+      button_text="Empower Your Team"
+      button_url="/services/support"
+      icon="✦"
       %}
     </div>
   </div>
 </section>
 
 <!-- Section Bio -->
-<section>
-  <div class="container">
-    <div class="bento-grid bento-grid--feature reverse">
-      <div class="bento-section bento-image-wrapper">
-        <img src="/assets/images/pages/rize/max-thinks.jpg" class="bento-image" />
-      </div>
-      <div class="bento-section">
-        <h2>Your Digital Partner</h2>
-        <p>I'm Max Harris — a web developer, educator, and community-minded technologist based in Vancouver. After more than a decade working in fast-paced startups and marketing teams, I made a conscious decision: to use my skills to serve the communities that matter most to me.</p>
-        <p>That's what Rize Digital is all about.</p>
-        <p>As a Black technologist with deep ties to Indigenous communities through my family, I understand that access to digital tools and knowledge isn't equal — but it should be. I've taught web development to learners from all walks of life, built accessible websites for nonprofits, and helped entrepreneurs bring their ideas online with confidence.</p>
-        <p>Now, I'm bringing that experience to Rize Digital — to support small businesses, non-profits, and community organizations through thoughtful web development, culturally-informed digital strategy, and hands-on education.
-          Whether you need a website, a workshop, or a roadmap for digital transformation, I'm here to build with you — not just for you.
-          Let's rise together.
-        </p>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- CTA Section -->
-{% include cta.html
-title="Let's start with a conversation"
-text="Have a project in mind? Curious how we might work together? Tell us what you're thinking — we'll follow up with next steps, resources, or a consultation."
-button_text="Start a Conversation"
-link="/contact?type=build"
-%}
