color styles and image container sizing

--- a/build.html
+++ b/build.html
@@ -11,7 +11,7 @@ image="/assets/images/pages/build/hero-build.jpg"
 %}
 
 <!-- Section -->
-<section>
+<section class="bg-red">
   <div class="container">
     <p>
       Whether you’re a nonprofit, a small business, or a community-led project, we’ll help you create a digital space that reflects your mission, grows with you, and feels welcoming to your audience.
@@ -22,12 +22,11 @@ image="/assets/images/pages/build/hero-build.jpg"
   </div>
 </section>
 
-<!-- Section -->
 <!-- Section - What We Do -->
 <section>
   <div class="container column">
     <div class="heading-container">
-      <h2>What We Build</h2>
+      <h2>We Build</h2>
       <p class="subtitle">
         Whether you’re a nonprofit, a small business, or a community-led project, we’ll help you create a digital space that reflects your mission, grows with you, and feels welcoming to your audience.
       </p>
@@ -97,15 +96,16 @@ image="/assets/images/pages/build/hero-build.jpg"
 </section>
 
 <!-- Section -->
-<section>
-  <div class="container column">
+<section class="">
+  <div class="bg-light">
     <div class="heading-container">
       <h2>Why Rize?</h2>
       <p class="subtitle">
         We build with care, cultural understanding, and long-term sustainability in mind. We know the challenges of limited resources, shifting capacity, and needing to “do it all” — and we build websites that work for real people, not just ideal scenarios.
       </p>
     </div>
-
+  </div>
+  <div class="container column">
     <div class="bento-container">
       <div class="heading-container">
         <h3>We Work Best With</h3>
