--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ cta_url="/contact"
 
 
 <!-- Section - Our Value -->
-<section>
+<section class="bg-red">
   <div class="container column">
     <div class="heading-container">
       <h2>Our Value to You</h2>
