--- a/connect.html
+++ b/connect.html
@@ -31,6 +31,11 @@ cta_url="/contact"
   </div>
 </section>
 
+<section class="bg-red">
+  <div class="container">
+    {% include social-links.html %}
+  </div>
+</section>
 
 <!-- Section - Values -->
 <section>
