--- a/build.html
+++ b/build.html
@@ -105,31 +105,42 @@ image="/assets/images/pages/build/hero-build.jpg"
       </p>
     </div>
   </div>
-  <div class="container column">
-    <div class="bento-container">
-      <div class="heading-container">
-        <h3>We Work Best With</h3>
+</section>
+
+<section>
+  <div class="container-full-width">
+    <div class="bento-grid bento-grid--feature reverse">
+      <div class="bento-section">
+        <img
+          src="/assets/images/pages/build/work2.jpg"
+          alt="Community Partnerships"
+          class="bento-image" />
       </div>
-      <ul class="bento-grid bento-grid--three-col tile-grid">
-        <li class="bento-section">
-          Nonprofits & Community Groups
-        </li>
-        <li class="bento-section">
-          Artists & Cultural Leaders
-        </li>
-        <li class="bento-section">
-          Entrepreneurs
-        </li>
-        <li class="bento-section">
-          Educational Organizations
-        </li>
-        <li class="bento-section">
-          Social Enterprises
-        </li>
-        <li class="bento-section">
-          Families, Youth, & Elders
-        </li>
-      </ul>
+      <div class="bento-section">
+        <div class="center">
+          <h3>We Work With</h3>
+        </div>
+        <ul class="bento-list">
+          <li>
+            Nonprofits & Community Groups
+          </li>
+          <li>
+            Artists & Cultural Leaders
+          </li>
+          <li>
+            Entrepreneurs
+          </li>
+          <li>
+            Educational Organizations
+          </li>
+          <li>
+            Social Enterprises
+          </li>
+          <li>
+            Families, Youth, & Elders
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </section>
