--- a/connect.html
+++ b/connect.html
@@ -19,15 +19,12 @@ cta_url="/contact"
 <!-- Section -->
 <section>
   <div class="container-full-width">
-    <div class="text-container">
-      <h2>Our Mission</h2>
-      <p class="subtitle">We are entering a new digital era and everyone deserves a place in it. Rize Digital helps communities rise by building the skills, tools, and confidence needed to thrive online.</p>
-      <p class="subtitle">Our mission is to uplift underserved communities by bridging gaps in access and creating space for growth, creativity, and connection.</p>
-      <p class="subtitle">Together, we're building a future where everyone can rise.</p>
-    </div>
-    <div class="image-container">
-      <img src="/assets/images/pages/connect/vision.jpg" alt="Rize Digital" />
-    </div>
+    {% include text-image.html
+    title="Our Mission"
+    image="/assets/images/pages/connect/vision.jpg"
+    image_alt="Rize Digital"
+    paragraphs="We are entering a new digital era and everyone deserves a place in it. Rize Digital helps communities rise by building the skills, tools, and confidence needed to thrive online.|Our mission is to uplift underserved communities by bridging gaps in access and creating space for growth, creativity, and connection.|Together, we're building a future where everyone can rise."
+    %}
   </div>
 </section>
 
