--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ cta_url="/contact"
     <div class="heading-container">
       <h2>Our Value to You</h2>
       <p class="subtitle">
-        You’re doing important work—serving your community, telling your story, organizing change. We’re here to make the digital side of that work easier, more effective, and more empowering.
+        You're doing important work—serving your community, telling your story, organizing change. We're here to make the digital side of that work easier, more effective, and more empowering.
       </p>
     </div>
   </div>
@@ -40,8 +40,11 @@ cta_url="/contact"
         <li class="bento-section">
           Nonprofits & Community Groups
         </li>
+        <li class="bento-section image-container">
+          <img
+            </li>
         <li class="bento-section">
-          Artists & Cultural Leaders
+          Artists
         </li>
         <li class="bento-section">
           Entrepreneurs
@@ -144,20 +147,10 @@ cta_url="/contact"
   </div>
 </section>
 
-<!-- Section CTA -->
-<section class="cta-section">
-  <div class="container">
-    <div class="cta-body bento-grid">
-      <div class="">
-        <h3>Let’s Work Together!</h3>
-        <p>Have a project in mind? Curious how we can help? Fill out our form to get started.</p>
-        <div class="button-container">
-          <a href="/contact" class="button">Start a Conversation</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-
-<!-- CTA Section -->
+<!-- CTA -->
+{% include cta.html
+title="Let's Work Together!"
+text="Have a project in mind? Curious how we can help? Fill out our form to get started."
+button_text="Start a Conversation"
+button_url="/contact"
+%}
