adds some more sections

--- a/build.html
+++ b/build.html
@@ -117,15 +117,15 @@ image="/assets/images/pages/build/hero-build.jpg"
           class="bento-image" />
       </div>
       <div class="bento-section">
-        <div class="center">
+        <div class="heading-container--sm">
           <h3>We Work With</h3>
         </div>
-        <ul class="bento-list">
+        <ul class="bento-list bento-grid--two-col">
           <li>
-            Nonprofits & Community Groups
+            Nonprofits
           </li>
           <li>
-            Artists & Cultural Leaders
+            Artists
           </li>
           <li>
             Entrepreneurs
@@ -137,7 +137,7 @@ image="/assets/images/pages/build/hero-build.jpg"
             Social Enterprises
           </li>
           <li>
-            Families, Youth, & Elders
+            Families
           </li>
         </ul>
       </div>
