--- a/connect.html
+++ b/connect.html
@@ -11,8 +11,7 @@ permalink: /connect/
 title="Together, we Rize!"
 subtitle="Lead With Confidence."
 image="/assets/images/pages/connect/connect.jpg"
-cta_text="Get In Touch"
-cta_url="/contact"
+social_links="true"
 %}
 
 
