--- a/grow.html
+++ b/grow.html
@@ -15,7 +15,7 @@ cta_url="/contact"
 %}
 
 <!-- Section -->
-<section>
+<section class="bg-red">
   <div class="container">
     <div>
       <p>
@@ -27,8 +27,6 @@ cta_url="/contact"
     </div>
   </div>
 </section>
-
-
 
 <!-- Section - What We Help You Do -->
 <section>
