--- a/learn.html
+++ b/learn.html
@@ -13,6 +13,15 @@ cta_text="Get In Touch"
 cta_url="/contact"
 %}
 
+<section class="bg-red">
+  <div class="container column">
+    <h2>How We Teach</h2>
+    <p>
+      Our workshops are designed for real people — not tech insiders. We use clear language, relevant examples, and culturally informed teaching to meet learners where they’re at. Sessions are available in-person or virtually, for individuals, small groups, and entire organizations.
+    </p>
+  </div>
+</section>
+
 <!-- Section - What We Offer -->
 <section>
   <div class="container column">
@@ -50,6 +59,38 @@ cta_url="/contact"
       button_url="/contact?type=career"
       icon="✦"
       %}
+    </div>
+  </div>
+</section>
+
+<section>
+  <div class="container">
+    <div class="bento-grid bento-grid--feature reverse">
+      <div class="bento-section">
+        <img
+          src="/assets/images/pages/learn/workshops.jpg"
+          alt="Community Partnerships"
+          class="bento-image" />
+      </div>
+      <div class="bento-section bg-red">
+        <div class="heading-container--sm">
+          <h3>Workshops</h3>
+        </div>
+        <ul class="bento-list">
+          <li>
+            <span>Online Safety</span>
+          </li>
+          <li>
+            <span>Artificial Intelligence</span>
+          </li>
+          <li>
+            <span>E-commerce</span>
+          </li>
+          <li>
+            <span>Digital Marketing</span>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </section>
