a lot of mobile styles

--- a/build.html
+++ b/build.html
@@ -14,10 +14,10 @@ image="/assets/images/pages/build/hero-build.jpg"
 <section class="bg-red">
   <div class="container">
     <p>
-      Whether you’re a nonprofit, a small business, or a community-led project, we’ll help you create a digital space that reflects your mission, grows with you, and feels welcoming to your audience.
+      Whether you're a nonprofit, a small business, or a community-led project, we'll help you create a digital space that reflects your mission, grows with you, and feels welcoming to your audience.
     </p>
     <p>
-      We don’t just build beautiful websites—we make sure you understand how to manage and update them, so you can stay in control of your presence online.
+      We don't just build beautiful websites—we make sure you understand how to manage and update them, so you can stay in control of your presence online.
     </p>
   </div>
 </section>
@@ -28,69 +28,41 @@ image="/assets/images/pages/build/hero-build.jpg"
     <div class="heading-container">
       <h2>We Build</h2>
       <p class="subtitle">
-        Whether you’re a nonprofit, a small business, or a community-led project, we’ll help you create a digital space that reflects your mission, grows with you, and feels welcoming to your audience.
+        Whether you're a nonprofit, a small business, or a community-led project, we'll help you create a digital space that reflects your mission, grows with you, and feels welcoming to your audience.
       </p>
       <p>
-        We don’t just build beautiful websites—we make sure you understand how to manage and update them, so you can stay in control of your presence online.
+        We don't just build beautiful websites—we make sure you understand how to manage and update them, so you can stay in control of your presence online.
       </p>
     </div>
     <div class="bento-container">
-      <div class="bento-grid bento-grid--feature reverse">
-        <div class="bento-section bento-image-wrapper">
-          <img
-            src="/assets/images/pages/build/digital-presence.jpg"
-            alt="Community Partnerships"
-            class="bento-image" />
-        </div>
-        <div class="bento-section">
-          <h3>🌍 Custom Websites</h3>
-          <p class="bento-description">
-            Responsive, accessible websites for nonprofits, community organizations, Indigenous businesses, and purpose-driven entrepreneurs.
-          </p>
-          <ul>
-            <li>Built on WordPress, Shopify, or static site generators like Jekyll</li>
-            <li>Designed with performance, accessibility, and storytelling in mind</li>
-            <li>Mobile-friendly, easy to update, and optimized for search</li>
-          </ul>
-          <a href="/services" class="button">Explore Our Services</a>
-        </div>
-      </div>
-      <div class="bento-grid bento-grid--feature">
-        <div class="bento-section">
-          <h3>🛍️ E-Commerce</h3>
-          <p class="bento-description">
-            Online stores that are clear, efficient, and aligned with your values. </p>
-          <ul>
-            <li>Setup and training with Shopify</li>
-            <li>Digital product integration and fulfillment support</li>
-            <li>Accessible and culturally respectful storefronts</li>
-          </ul>
-          <a href="#" class="button">Learn More</a>
-        </div>
-        <div class="bento-section bento-image-wrapper">
-          <img
-            src="/assets/images/pages/build/e-commerce.jpg"
-            alt="Community Partnerships"
-            class="bento-image" />
-        </div>
-      </div>
-      <div class="bento-grid bento-grid--feature reverse">
-        <div class="bento-section bento-image-wrapper">
-          <img
-            src="/assets/images/pages/build/apps.jpg"
-            alt="Community Partnerships"
-            class="bento-image" />
-        </div>
-        <div class="bento-section">
-          <h3>📱 Apps & Tools</h3>
-          <p class="bento-description">
-            Simple custom tools and web apps to support your unique needs.
-          </p>
-          <li>Lightweight, purpose-built solutions for internal or public use</li>
-          <li>Tailored to support organizational workflows</li>
-          <a href="#" class="button">Learn More</a>
-        </div>
-      </div>
+      {% include feature.html
+      title="Custom Websites"
+      description="Responsive, accessible websites for nonprofits, community organizations, Indigenous businesses, and purpose-driven entrepreneurs. Built on WordPress, Shopify, or static site generators like Jekyll. Designed with performance, accessibility, and storytelling in mind. Mobile-friendly, easy to update, and optimized for search."
+      image="/assets/images/pages/build/digital-presence.jpg"
+      image_alt="Community Partnerships"
+      button_text="Explore Our Services"
+      button_url="/services"
+      reverse=true
+      %}
+
+      {% include feature.html
+      title="E-Commerce"
+      description="Online stores that are clear, efficient, and aligned with your values. Setup and training with Shopify. Digital product integration and fulfillment support. Accessible and culturally respectful storefronts."
+      image="/assets/images/pages/build/e-commerce.jpg"
+      image_alt="Community Partnerships"
+      button_text="Learn More"
+      button_url="#"
+      %}
+
+      {% include feature.html
+      title="Apps & Tools"
+      description="Simple custom tools and web apps to support your unique needs. Lightweight, purpose-built solutions for internal or public use. Tailored to support organizational workflows."
+      image="/assets/images/pages/build/apps.jpg"
+      image_alt="Community Partnerships"
+      button_text="Learn More"
+      button_url="#"
+      reverse=true
+      %}
     </div>
   </div>
 </section>
@@ -101,7 +73,7 @@ image="/assets/images/pages/build/hero-build.jpg"
     <div class="heading-container">
       <h2>Why Rize?</h2>
       <p class="subtitle">
-        We build with care, cultural understanding, and long-term sustainability in mind. We know the challenges of limited resources, shifting capacity, and needing to “do it all” — and we build websites that work for real people, not just ideal scenarios.
+        We build with care, cultural understanding, and long-term sustainability in mind. We know the challenges of limited resources, shifting capacity, and needing to "do it all" — and we build websites that work for real people, not just ideal scenarios.
       </p>
     </div>
   </div>
@@ -148,7 +120,7 @@ image="/assets/images/pages/build/hero-build.jpg"
 <!-- CTA Section -->
 {% include cta.html
 title="Ready to bring your vision online?"
-text="Whether you’re launching a new website, setting up an online shop, or rebuilding your digital presence with accessibility in mind — we’re here to help you build something strong, beautiful, and easy to manage."
+text="Whether you're launching a new website, setting up an online shop, or rebuilding your digital presence with accessibility in mind — we're here to help you build something strong, beautiful, and easy to manage."
 button_text="Start Your Build"
 link="/contact?type=build"
 %}
