--- a/grow.html
+++ b/grow.html
@@ -30,7 +30,7 @@ cta_url="/contact"
 
 <!-- Section - What We Help You Do -->
 <section>
-  <div class="container column">
+  <div class="container">
     <div class="heading-container">
       <h2>What We Help You Do</h2>
     </div>
@@ -42,7 +42,6 @@ cta_url="/contact"
       image_alt="Digital Strategy Planning"
       button_text="Plan Your Outreach"
       button_url="/services/strategy"
-      icon="✦"
       reverse=true
       %}
 
@@ -53,7 +52,6 @@ cta_url="/contact"
       image_alt="Digital Tools Setup"
       button_text="Streamline Your Tools"
       button_url="/services/tools"
-      icon="✦"
       %}
 
       {% include feature.html
@@ -63,7 +61,6 @@ cta_url="/contact"
       image_alt="Team Support and Training"
       button_text="Empower Your Team"
       button_url="/services/support"
-      icon="✦"
       reverse=true
 
       %}
