--- a/connect.html
+++ b/connect.html
@@ -35,7 +35,7 @@ social_links="true"
 
 <!-- Section - Values -->
 <section>
-  <div class="container column">
+  <div class="container">
     <div class="heading-container">
       <h2>Our Values</h2>
       <!-- <p class="subtitle">We offer support where you need it most—always guided by care, clarity, and community.</p> -->
