--- a/learn.html
+++ b/learn.html
@@ -14,17 +14,19 @@ cta_url="/contact"
 %}
 
 <section class="bg-red">
-  <div class="container column">
-    <h2>How We Teach</h2>
-    <p>
-      Our workshops are designed for real people — not tech insiders. We use clear language, relevant examples, and culturally informed teaching to meet learners where they’re at. Sessions are available in-person or virtually, for individuals, small groups, and entire organizations.
-    </p>
+  <div class="container">
+    <div class="heading-container column">
+      <h2>How We Teach</h2>
+      <p>
+        Our workshops are designed for real people — not tech insiders. We use clear language, relevant examples, and culturally informed teaching to meet learners where they’re at. Sessions are available in-person or virtually, for individuals, small groups, and entire organizations.
+      </p>
+    </div>
   </div>
 </section>
 
 <!-- Section - What We Offer -->
 <section>
-  <div class="container column">
+  <div class="container">
     <div class="heading-container">
       <h2>What We Offer</h2>
     </div>
@@ -36,7 +38,6 @@ cta_url="/contact"
       image_alt="Team Workshop Session"
       button_text="Book a Team Session"
       button_url="/contact?type=team"
-      icon="✦"
       %}
 
       {% include feature.html
@@ -46,7 +47,6 @@ cta_url="/contact"
       image_alt="Community Education Workshop"
       button_text="Book a Community Workshop"
       button_url="/contact?type=community"
-      icon="✦"
       reverse=true
       %}
 
@@ -57,7 +57,6 @@ cta_url="/contact"
       image_alt="Tech Skills Training"
       button_text="Start a Career-Focused Session"
       button_url="/contact?type=career"
-      icon="✦"
       %}
     </div>
   </div>
