--- a/rize.html
+++ b/rize.html
@@ -34,7 +34,7 @@ services="Staff onboarding and documentation|One-on-one or team training session
 
 <!-- Section - What We Help You Do -->
 <section>
-  <div class="container column">
+  <div class="container">
     <div class="heading-container">
       <h2>What We Help You Do</h2>
     </div>
